# azure-iac-msp-lab

./: .gitignore  HELIX-RETRIEVAL-POLICY.md  README.md  bicepconfig.json  locals.tf  network.tf  outputs.tf  terraform.tfvars.example  variables.tf
.helix/: CHATGPT-PROJECT-BOUNDARY.md  MIGRATION-CHECKLIST.md  README.md  repository-context.json  retrieval-policy.json
.project/: README.md  active-work.json  current-reality.json  decisions.md  deployment-history.jsonl  environment-state.json  repository-events.jsonl  validate.py  workstream-catalog.json
demo_api/: .funcignore  core.py  function_app.py  runtime.py  standalone_server.py
docs/: ARCHITECTURE.md  COST_CONTROLS.md  EVIDENCE_INDEX.md  PROJECT_STATUS.md  VERIFICATION.md  app.js  architecture.md  azure-lifecycle.md  collector-hosted-demo-api.md  collector-vm.md  index.html  (+5 more)
servicetracer/: README.md  pyproject.toml
servicetracer/collectors/: README.md
servicetracer/collectors/systemd/: servicetracer-collector.service
servicetracer/collectors/windows/: Send-ServiceTracerRecord.ps1
servicetracer/examples/: containment_source_records.jsonl  evidence_adapters.json  load_balancer_state.json  remote_access_service_path.json  source_records.jsonl  tickets.json
servicetracer/src/servicetracer/: __init__.py  analyzer.py  azure_demo.py  cli.py  collector.py  collector_cli.py  containment.py  demo_data.py  demo_report.py  evidence.py  publish_cli.py  report_publication.py
servicetracer/tests/: test_analyzer.py  test_azure_demo.py  test_collector.py  test_containment.py  test_demo_report.py  test_evidence_ingestion.py  test_report_publication.py  test_visual_demo.py
(+148 files in other folders)
