[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "servicetracer-demo"
version = "0.1.0"
description = "Deterministic service-path incident localization demo"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
servicetracer = "servicetracer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
